--- a/add_book.html
+++ b/add_book.html
@@ -3,56 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تقسیم محتوای HTML</title>
-    <style>
-        body {
-            font-family: sans-serif;
-            padding: 20px;
-        }
-        #inputHtml {
-            width: 90%;
-            height: 150px;
-            margin-bottom: 10px;
-        }
-        #outputList li {
-            border: 1px solid #ccc;
-            margin-bottom: 15px;
-            padding: 10px;
-            list-style-type: none; /* حذف شماره‌گذاری پیش‌فرض */
-            counter-increment: page-counter; /* شمارنده برای شماره صفحه */
-        }
-        #outputList li::before {
-            content: "صفحه " counter(page-counter); /* نمایش شماره صفحه */
-            font-weight: bold;
-            display: block;
-            margin-bottom: 10px;
-            color: #555;
-        }
-        button {
-            padding: 10px 15px;
-            cursor: pointer;
-        }
-    </style>
+    <title>افزودن کتاب</title>
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
-
-    <h1>اضافه کردن کتاب</h1>
-    <input type="text" name="title" id="title" placeholder="نام کتاب (انگلیسی)">
-
-    <p>محتوای HTML خام کتاب خود را (بدون تگ‌های <html>, <head>, <body>) در کادر زیر وارد کنید یا از دکمه بارگذاری فایل استفاده نمایید. سپس روی دکمه "تقسیم‌بندی" کلیک کنید.</p>
-    <textarea id="inputHtml" placeholder="محتوای HTML خام را اینجا وارد کنید... مثلا: <h1>فصل اول</h1><p>متن پاراگراف...</p><h2>بخش ۱.۱</h2><p>ادامه متن...</p>"></textarea>
-    <br>
-    <label for="fileInput">یا یک فایل HTML بارگذاری کنید: </label>
-    <input type="file" id="fileInput" accept=".html,.htm">
+<body class="main text-white text-right vazir" dir="rtl">
+<div class="container p-md-5 py-5">
+    <div class="card p-md-5 p-3">
+        <a href="index.html" class="btn btn-dark mb-2">رفتن به کتابخونه</a>
+        <h1 class="extrabold">اضافه کردن کتاب</h1>
+    <div class="form-group">
+    <input type="text" class="form-control" name="title" id="title" placeholder="نام کتاب (انگلیسی)">
+    </div>
+    <div class="form-group">
+        <label>محتوای خام کتاب به صورت html:</label>
+        <textarea id="inputHtml" class="form-control" placeholder="محتوای HTML خام را اینجا وارد کنید... مثلا: <h1>فصل اول</h1><p>متن پاراگراف...</p><h2>بخش ۱.۱</h2><p>ادامه متن...</p>"></textarea>        
+    </div>
+    <div class="form-group">
+        <label for="fileInput">یا یک فایل HTML بارگذاری کنید: </label>
+        <input type="file" class="form-control-file" id="fileInput" accept=".html,.htm">
+    </div>
     <br><br>
-    <label for="chunkSize">تعداد تگ در هر صفحه: </label>
-    <input type="number" id="chunkSize" value="20" min="1">
+    <div class="form-group">
+        <label for="chunkSize">تعداد تگ در هر صفحه: </label>
+        <input type="number" class="form-control" id="chunkSize" value="5" min="1">
+    </div>
     <br><br>
-    <button onclick="processHtml()">تقسیم‌بندی</button>
-
-    <h2>خروجی تقسیم‌شده:</h2>
+    <button onclick="processHtml()" class="btn btn-primary">افزودن</button>
+</div>
+<div class="card mt-5 p-3">
+    <h2>خروجی:</h2>
     <ul id="outputList" style="counter-reset: page-counter;">
-        </ul>
+    </ul>
+</div>
+
+</div>
+</div>
 
     <script>
         // دریافت المان‌ها
@@ -113,24 +99,31 @@
             console.log(allElements);
             
             // ۳. تقسیم المان‌ها به بخش‌های (chunk) با اندازه مشخص
-            for (let i = 0; i < allElements.length; i += chunkSize) {
+            for (let i = 0; i < allElements.length; i += chunkSize*2) {
                 console.log(i);
                 
-                const chunk = allElements.slice(i, i + chunkSize);
+                const two_chunk = allElements.slice(i, i + chunkSize*2);
+                const page = document.createElement('section');
+                page.className = "page"
 
-                // ۴. ایجاد یک آیتم لیست (li) برای هر بخش
-                const listItem = document.createElement('li');
-                listItem.className = "page"
+                current_class = "front"
+                for (let i = 0; i < two_chunk.length; i += chunkSize) {
+                    chunk = two_chunk.slice(i, i + chunkSize);
+                    const front_back = document.createElement("div")
+                    front_back.className = current_class
 
-                // ۵. اضافه کردن تگ‌های هر بخش به آیتم لیست مربوطه
-                chunk.forEach(element => {
-                    // از cloneNode(true) استفاده می‌کنیم تا المان اصلی دستکاری نشود
-                    // و اگر قرار باشد در جای دیگری هم استفاده شود، مشکلی پیش نیاید.
-                    listItem.appendChild(element.cloneNode(true));
-                });
+                    if (current_class == "front"){
+                        current_class = "back"
+                    }else{
+                        current_class = "front"
+                    }
 
-                // ۶. اضافه کردن آیتم لیست به لیست خروجی (ul)
-                outputList.appendChild(listItem);
+                    chunk.forEach(element => {
+                        front_back.appendChild(element.cloneNode(true));
+                    });
+                    page.appendChild(front_back)
+                }
+                outputList.appendChild(page);
             }
 
             console.log(`محتوا به ${Math.ceil(allElements.length / chunkSize)} صفحه تقسیم شد.`);
