--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <section class="books mt-5" id="books_section">
             <div class="row">
                 <div class="col-md-7 offset-3 col-12">
-                    <h2 class="text-white text-left extrabold">کتاب ها 😎</h2>
+                    <h2 class="text-white text-md-left text-center extrabold">کتاب ها 😎</h2>
                 </div>
                 <div class="col-md-2 col-12">
                     <a href="add_book.html" class="btn btn-dark">افزودن کتاب</a>
